Convert Format to a class