@@ -7,15 +7,12 @@ import edu.illinois.library.cantaloupe.processor.codec.jpeg.JPEGImageWriter;
 import edu.illinois.library.cantaloupe.processor.codec.png.PNGImageWriter;
 import edu.illinois.library.cantaloupe.processor.codec.tiff.TIFFImageWriter;
 
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.Set;
 
 public final class ImageWriterFactory {
 
-    private static final Set<Format> SUPPORTED_FORMATS =
-            Collections.unmodifiableSet(EnumSet.of(Format.GIF, Format.JPG,
-                    Format.PNG, Format.TIF));
+    private static final Set<Format> SUPPORTED_FORMATS = Set.of(
+            Format.GIF, Format.JPG, Format.PNG, Format.TIF);
 
     /**
      * @return Set of supported output formats.
@@ -26,25 +23,18 @@ public final class ImageWriterFactory {
 
     public ImageWriter newImageWriter(Encode encode) {
         ImageWriter writer;
-
-        switch (encode.getFormat()) {
-            case GIF:
-                writer = new GIFImageWriter();
-                break;
-            case JPG:
-                writer = new JPEGImageWriter();
-                break;
-            case PNG:
-                writer = new PNGImageWriter();
-                break;
-            case TIF:
-                writer = new TIFFImageWriter();
-                break;
-            default:
-                throw new IllegalArgumentException(
-                        "Unsupported output format: " + encode.getFormat());
+        if (Format.GIF.equals(encode.getFormat())) {
+            writer = new GIFImageWriter();
+        } else if (Format.JPG.equals(encode.getFormat())) {
+            writer = new JPEGImageWriter();
+        } else if (Format.PNG.equals(encode.getFormat())) {
+            writer = new PNGImageWriter();
+        } else if (Format.TIF.equals(encode.getFormat())) {
+            writer = new TIFFImageWriter();
+        } else {
+            throw new IllegalArgumentException(
+                    "Unsupported output format: " + encode.getFormat());
         }
-
         writer.setEncode(encode);
         return writer;
     }
